mongo-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-db-deployment
spec:
  selector:
    matchLabels:
      run: mongo-db
  replicas: 2
  template:
    metadata:
      labels:
        run: mongo-db
    spec:
      containers:
      - name: mongo-db
        image: mongo
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata: 
  name: mongo-db-service
spec:
  ports:
  - port: 27017
    protocol: TCP
  selector:
    run: mongo-db
