mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-deployment
spec:
  selector:
    matchLabels:
      run: mongo-express
  replicas: 2
  template:
    metadata:
      labels:
        run: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata: 
  name: mongo-express-service
spec:
  ports:
  - port: 8081
    protocol: TCP
    nodePort: 30000
  selector:
    run: mongo-express
  type: LoadBalancer
